# final-project-final-project

./: Cargo.toml  package-lock.json  package.json  webpack.config.js
lib/providers/download/deluge/: Cargo.toml
lib/providers/download/deluge/src/: lib.rs
lib/providers/download/deluge/src/rencode/: constants.rs  decoder.rs  encoder.rs  error.rs  mod.rs  objects.rs
lib/providers/metadata/tvmaze/: Cargo.toml
lib/providers/metadata/tvmaze/src/: api.rs  client.rs  error.rs
lib/providers/metadata/tvmaze/src/resources/: episode.rs  general.rs  tv_show.rs
migrations/: 1528850903-create-tv-shows-table.sql  1528851362-create-tv-show-seasons-table.sql  1528851580-create-tv-show-episodes-table.sql
public/: index.html
src/: api.rs  client.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs  tv_show.rs
src/providers/metadata/: mod.rs  tvmaze.rs
src/resources/: episode.rs  mod.rs  person.rs  tv_show.rs
src/routes/: mod.rs  search.rs  shows.rs
web/: app.js
web/scripts/: actions.js  reducers.js
web/scripts/components/: episodes-table-row.js  episodes-table.js  header.js  home.js  nav-item.js  navbar.js  shows-table-row.js  shows-table.js  unify.js
web/scripts/components/shows/: add.js  get.js  index.js
web/styles/: _settings.scss  app.scss
web/styles/base/: _presets.scss
web/styles/components/: _episodes-table.scss  _header.scss  _navmenu.scss  _search.scss  _show.scss  _shows-table.scss
web/styles/sections/: _main.scss
